add html body and form, and js getUserInput function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>SHOUTING MACHINE</title>
 </head>
 <body>
-    
+    <h1 class="main-header">THE SHOUTING MACHINE</h1>
+    <form>
+        <label for="userInput">Enter anything you would like!</label>
+        <input id="userInput" type="text" name="userInput">
+    </form>
+
+<div id="shout-back" class="hidden"></div>
+    <p>
+        <span id="yellHey">HEY!</span><span id="userResponse">_________</span></p>
+    </div>
 </body>
 </html>
