clean up js functions, add form call and return

--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/styles.css" type="text/css">
-   <script src="js/scripts.js"></script>
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <script src="js/scripts.js"></script>
     <title>SHOUTING MACHINE</title>
 </head>
+
 <body>
     <h1 class="main-header">THE SHOUTING MACHINE</h1>
     <form>
         <label for="userInput">Enter anything you would like!</label>
         <input id="userInput" type="text" name="userInput">
+        <button type="submit">Yell back!!</button>
     </form>
 
-<div id="shout-back" class="hidden"></div>
-    <p>
-        <span id="yellHey">HEY!</span><span id="userResponse">_________</span></p>
+    <div id="shout-back" class="hidden">
+        <p>
+            <span id="yellHey">HEY! </span>
+            <span id="userReturn"></span>
+         </p>
     </div>
 </body>
+
 </html>
